[project]
name = "advent_of_code"
version = "2022"
description = "My answeres to Advent of Code 2022"
authors = [{ name = "Ben Gosney", email = "<bengosney@googlemail.com>" }]
requires-python = "^3.11"

[project.urls]
homepage = "https://github.com/bengosney/Advent-Of-Code-2022"
repository = "https://github.com/bengosney/Advent-Of-Code-2022"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 128
target-version = ['py311']

[tool.pycln]
all = true
